# aw-litebox

./: Cargo.toml  ISSUE_ANALYSIS_2026-02-08.md  TEST_SUMMARY.md  memory.md
.github/agentics/: litebox-skills.md  nightly-gvisor-tests.md
.github/workflows/: litebox-skills.lock.yml  litebox-skills.md  nightly-gvisor-tests.lock.yml  repo-assist.lock.yml  (+2 more)
.serena/: project.yml
litebox/: Cargo.toml
litebox-platform-linux-userland/: Cargo.toml
litebox_skill_runner/: CAPABILITIES.md  Cargo.toml  EVALUATION_2026-02-01.md  EVALUATION_2026-02-02.md  EVALUATION_2026-02-02_UPDATED.md  EVALUATION_2026-02-03.md  EVALUATION_2026-02-05.md  EVALUATION_2026-02-05_AFTERNOON.md  EVALUATION_2026-02-05_NIGHTLY.md  EVALUATION_2026-02-06.md  EVALUATION_2026-02-07_BUILD.md  EVALUATION_2026-02-08.md  EVALUATION_2026-02-08_AFTERNOON.md  EVALUATION_2026-02-08_EVENING.md  EVALUATION_2026-02-08_NIGHTLY.md  EVALUATION_2026-02-08_UPDATED.md  EVALUATION_2026-02-09_AFTERNOON.md  EVALUATION_2026-02-11.md  EVALUATION_2026-02-12_NIGHTLY.md  EVALUATION_2026-02-13_NIGHTLY.md  EVALUATION_2026-02-15.md  EVALUATION_2026-02-15_NIGHTLY.md  EVALUATION_2026-02-16_NIGHTLY.md  EVALUATION_2026-02-22.md  EVALUATION_2026-02-23.md  EVALUATION_2026-03-03.md  GVISOR_SYSCALL_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PYTHON_SETUP_GUIDE.md  README.md  SKILLS_COMPATIBILITY_MATRIX.md  SKILLS_DEPENDENCY_ANALYSIS.md  SKILLS_TESTING_PLAN.md
litebox_skill_runner/examples/: README.md  run_skill_creator.sh  test_algorithmic_art.sh  test_skill_creator.sh  test_skill_creator_detailed.sh
litebox_skill_runner/src/: lib.rs  main.rs
(+31 files in other folders)
