[package]
name = "litebox_skill_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.33", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
zip = "2.2.2"
tempfile = "3.0"
tar = "0.4"
flate2 = "1.0"

[lints]
workspace = true
