[package]
name = "litebox_skill_runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Skill runner for executing Anthropic Agent Skills in LiteBox"
repository = "https://github.com/lpcox/aw-litebox"

[dependencies]

[dev-dependencies]

[lints]
workspace = true
